build.gradle devtool 디펜던시 추가 application.properties 자동반영 추가

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     // spring
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    compileOnly 'org.springframework.boot:spring-boot-devtools'
 
     // database
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
