--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly 'org.springframework.boot:spring-boot-devtools'
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // database
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
@@ -33,6 +34,7 @@ dependencies {
     // thymeleaf
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.1.0'
+//    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 
     // mapper
     implementation 'org.modelmapper:modelmapper:3.1.0'
@@ -42,6 +44,7 @@ dependencies {
 
     //JSON
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
 
 }
 
