수업 페이지 : 뉴스 추천 및 불러오기 기능 개발

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,8 @@ spring.datasource.password=webuser
 
 logging.level.org.springframework=info
 logging.level.com.multicampus=debug
+logging.pattern.console=[%d{yyyy-MM-dd HH:mm:ss}:%-3relative] %green([%thread]) %highlight(%-3level) %logger{36} %boldWhite([%C.%M:%yellow(%L)]) - %msg%n
 
 spring.devtools.livereload.enabled=true
+
+mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
