--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,10 @@ dependencies {
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+
+    //aspect
+    implementation 'org.aspectj:aspectjweaver:1.9.7'
+
 }
 
 
