--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,13 @@ dependencies {
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+
+    //JBCrypt
+    implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
+
+    //Mail
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+//    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.7.1'
 }
 
 
