SMTP, 튜티 회원가입 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   mail:
     host: smtp.gmail.com
     prot: 587
-    username: ahtobest@gmail.com
-    password: jexkxbuesuidxmzi
+    username: dldusdn8060@gmail.com
+    password: aalminfmrxqfglgg
     properties:
       mail:
         smtp:
