--- a/topicsation_class/package.json
+++ b/topicsation_class/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@socket.io/admin-ui": "^0.5.1",
     "express": "^4.18.2",
+    "jwt-decode": "^3.1.2",
     "localtunnel": "^2.0.2",
     "mustache": "^4.2.0",
     "mustache-express": "^1.3.2",
