--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,12 @@ dependencies {
 
     //JBCrypt
     implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
+
+    //NCP S3
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.11.238'
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
+    implementation 'com.sun.xml.bind:jaxb-impl:2.3.3'
+    implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
 }
 
 
