5월 4일 mariadb server 연결

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8081
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/webdb
-spring.datasource.username=webuser
-spring.datasource.password=webuser
+spring.datasource.url=jdbc:mariadb://115.85.181.151:3306/TopicsationDB
+spring.datasource.username=topicsation
+spring.datasource.password=wcr0516
 
 logging.level.org.springframework=info
 logging.level.com.multicampus=debug
