화상 채팅 수업 관련 파일들 리팩토링

--- a/topicsation_class/package.json
+++ b/topicsation_class/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "zoom",
+  "name": "Video chatting",
   "version": "1.0.0",
-  "description": "Zoom Clone using WebRTC and Websockets",
+  "description": "Video chatting using WebRTC and Websockets",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon"
