--- a/topicsation_class/package.json
+++ b/topicsation_class/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@socket.io/admin-ui": "^0.5.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jwt-decode": "^3.1.2",
     "localtunnel": "^2.0.2",
