7월 4일 재배포 1. MariaDB -> MySQL로 변경

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     compileOnly 'org.springframework.boot:spring-boot-devtools'
 
     // database
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+    runtimeOnly 'com.mysql:mysql-connector-j'
 
     // ORM
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.0'
